fix white space right from body

--- a/client/assets/css/style-md.css
+++ b/client/assets/css/style-md.css
@@ -11,7 +11,7 @@
 	}
 	.intro {
 		width: 100%;
-	    /*height: 100vh;*/
+	    height: 100vh;
 	    background: url("../img/intro.jpg") center no-repeat;
 	    background-size: cover;
 	    position: relative;
